# Team_5_project

./: README.md  main.py  pyproject.toml  setup.py
help_you/: README.md  assistant.py  book.py  decorator.py  instructions.py  main.py
help_you/contact_classes/: contact_work.py  fields.py  record.py
help_you/help_you/: main.py
help_you/help_you/classes/: contact_book_classes.py  decorator.py  file_sorter.py  note_book_classes.py  user_interface.py
help_you/help_you/contact_classes/: contact_work.py
help_you/help_you/instructions/: contact_book_instruction  note_book_instruction.txt
help_you/instructions/: contact_book_instruction  file_sorter_instruction  note_book_instruction.txt
help_you/note_classes/: note.py  note_work.py
