[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "help-you"
version = "0.1"
authors=[{name="Stas"}]
description = "Small program"
readme = "README.md"

requires-python = ">=3.10"

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "request"

[tool.setuptools.packages.find]
where = ["help_you"]
#include = ["contacts.bin", "notes.bin", "main*"]

[project.scripts]
help_you = "main:main"